added missing services, moved Webserver.js to a central place
