# services/orders/src/openapi.yaml
@@ -2,16 +2,16 @@ openapi: 3.0.3
 info:
   title: Order Service
   description: |-
-    This service provides all the necessary methods for creating and managing orders.
+    This service provides all necessary methods for creating and managing orders.
   version: 0.1.0
 paths:
   /order:
     post:
       summary: create a new order
-      description: Returns a list containing all products.
+      description: Returns the order ID.
       operationId: createOrder
       requestBody:
-        description: Update an existent pet in the store
+        description: create a new order
         content:
           application/json:
             schema:
@@ -61,7 +61,7 @@ paths:
         '400':
           description: Cannot accept the order.
     
-  /order/{orderId}:        
+  /order/byid/{orderId}:        
     get:
       summary: get order by ID
       description: Returns the corresponding order object.
@@ -76,16 +76,27 @@ paths:
             
       responses:
         '200':
-          description: The provided idempotencyKey was already used and the order is the same.
+          description: The corresponding order.
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  orderId:
+                  idempotencyKey:
                     type: string
-                example:
-                  - orderId: "1234ed2"
+                    example: 'eerr-ddfr-2232'
+                  cartContent:
+                    type: array
+                    items: 
+                      type: object
+                    properties:
+                      productId: 
+                        type: string
+                      quantity: 
+                        type: integer
+                    example:
+                      - productId: '123e4'
+                        quantity: 5
         
         '400': 
           description: order not found  
@@ -93,7 +104,7 @@ paths:
   /order/info:
     get:
       summary: get service related informations
-      description: Returns the version and startup time of the service. This path is also used to satifsy the health probe of the Azure Application Gateway.
+      description: Returns the version, url path prefix and startup time of the service. This path is also used to satifsy the health probe of the Azure Application Gateway.
       operationId: getServiceInfo
       responses:
         '200':
@@ -105,10 +116,13 @@ paths:
                 properties:
                   version:
                     type: string
+                  pathPrefix:
+                    type: string
                   start:
                     type: string
                 example:
                   - version: "1.0.0"
+                    pathPrefix: '/product'
                     start: "2022-11-28T18:21:34.846Z"
         
   
